--- a/css/main.scss
+++ b/css/main.scss
@@ -150,7 +150,8 @@ ul {
     display: flex;
     align-items: center;
     gap: .5rem;
-    color: $black;
+    color: $white;
+    font-size: calc(1rem + .5vw);
 
     span{
       width: 1.5rem;
@@ -160,9 +161,12 @@ ul {
       display: flex;
       justify-content: center;
       align-items: center;
+      // line-height: 1.5rem;
+      // text-align: center;
       i{
         font-size: .7rem;
         color: $black;
+        padding-top: -50%;
       }
 
     }
@@ -174,7 +178,7 @@ ul {
   list-style: none;
   gap: 1rem;
   transform: translateY(-200%);
-  background-color: rgba($color: $black, $alpha: .05);
+  background-color: rgba($color: $white, $alpha: .5);
   width: 100%;
   height: 100vh;
   transition: all .5s ease-in-out;
@@ -182,17 +186,55 @@ ul {
   top: 0;
   left: 0;
   z-index: -1;
-  padding: 5rem;
+  padding-top: 5rem;
+  overflow-y: scroll;
 }
 
 .nav_list-item{
-  padding: 1rem 0;
-  color: $black;
+  padding: 1rem 2rem;
+  color: $white;
   font-size: calc(1rem + .2rem);
   font-weight: 600;
 }
 
 
+.intro{
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/Untitled-1.jpg);
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  z-index: -1;
+  // animation: bgc_anim 5s linear infinite;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  &:before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: $black, $alpha: .25);
+
+
+  }
+}
+
+// @keyframes bgc_anim{
+  
+//     0% { background-size: 100%; }
+//     100% { background-size: 120%; }
+  
+// }
+
+
+@media(max-width: 768px){
+  .intro{
+    background-position: right;
+  }
+}
+
 .nav_toggle{
   transform: translateY(0);
+  
 }
