--- a/css/main.css
+++ b/css/main.css
@@ -9006,7 +9006,6 @@ ul {
   left: 0;
   z-index: -1;
   padding-top: 5rem;
-  overflow-y: scroll;
 }
 
 .nav_list-item {
@@ -9019,7 +9018,7 @@ ul {
 .intro {
   width: 100%;
   height: 100vh;
-  background-image: url(../img/Untitled-1.jpg);
+  background-image: url(../img/intro-bg.jpg);
   background-size: cover;
   background-position: center center;
   position: relative;
@@ -9037,7 +9036,11 @@ ul {
 
 @media (max-width: 768px) {
   .intro {
-    background-position: right;
+    background-position: center;
+    background-image: url(../img/intro-bg-md.jpg);
+  }
+  .intro:before {
+    background-color: rgba(0, 0, 0, 0.6);
   }
 }
 .nav_toggle {
