--- a/css/main.scss
+++ b/css/main.scss
@@ -187,7 +187,7 @@ ul {
   left: 0;
   z-index: -1;
   padding-top: 5rem;
-  overflow-y: scroll;
+  // overflow-y: scroll;
 }
 
 .nav_list-item{
@@ -201,7 +201,7 @@ ul {
 .intro{
   width: 100%;
   height: 100vh;
-  background-image: url(../img/Untitled-1.jpg);
+  background-image: url(../img/intro-bg.jpg);
   background-size: cover;
   background-position: center center;
   position: relative;
@@ -228,9 +228,17 @@ ul {
 // }
 
 
+
 @media(max-width: 768px){
   .intro{
-    background-position: right;
+    background-position: center;
+    background-image: url(../img/intro-bg-md.jpg);
+    &:before{
+      
+      background-color: rgba($color: $black, $alpha: .6);
+  
+  
+    }
   }
 }
 
