intro section font size correction

--- a/css/main.scss
+++ b/css/main.scss
@@ -297,7 +297,7 @@ ul {
     transform: translate(0, 26rem);
     padding-right: 3rem;
     width: 90vw;
-    font-size: calc(1rem + .5vw);
+    // font-size: calc(1.5rem + .5vw);
   }
 }
 
