logo animate by gsap

--- a/css/main.scss
+++ b/css/main.scss
@@ -125,7 +125,7 @@ ul {
 
   .logo {
     color: $black;
-    animation: logo_anim 4s linear infinite;
+    // animation: logo_anim 4s linear infinite;
 
     img {
       height: 4rem;
