--- a/css/main.scss
+++ b/css/main.scss
@@ -25,10 +25,8 @@ $dul_blue: #361C5B;
 $blue: #1AB9FD;
 $color-orange: #FCC000;
 $color-crimson: #FD6766;
-$color-green: #ACCC4F;
-$color-yellow: #FDC100;
-$d-pink: #FF4981;
-$color_l-gray: #878786;
+$color-green: #D8FE35;
+
 
 .site_wrapper {
   overflow-x: hidden;
@@ -67,24 +65,24 @@ ul {
 
 // styling of theme buttons
 
-.btn_theme {
-  display: inline-block;
-  text-decoration: none;
-  padding: .7rem 1.3rem .6rem;
-  border-radius: .5rem;
-  font-size: calc(.8rem + .2vw);
-  transition: all ease-in-out .2s;
-  background-color: $d-pink;
-  color: $white;
-  border: 1px solid transparent;
+// .btn_theme {
+//   display: inline-block;
+//   text-decoration: none;
+//   padding: .7rem 1.3rem .6rem;
+//   border-radius: .5rem;
+//   font-size: calc(.8rem + .2vw);
+//   transition: all ease-in-out .2s;
+//   background-color: $d-pink;
+//   color: $white;
+//   border: 1px solid transparent;
 
-  &:hover {
-    background-color: $white;
-    border-color: $d-pink;
-    color: $color-crimson;
-  }
+//   &:hover {
+//     background-color: $white;
+//     border-color: $d-pink;
+//     color: $color-crimson;
+//   }
 
-}
+// }
 
 
 //global styling
@@ -133,23 +131,23 @@ ul {
     }
   }
 
-  @keyframes logo_anim {
-    0% {
-      transform: translateY(0);
-    }
+  // @keyframes logo_anim {
+  //   0% {
+  //     transform: translateY(0);
+  //   }
 
-    50% {
-      transform: translateY(.5rem);
-    }
+  //   50% {
+  //     transform: translateY(.5rem);
+  //   }
 
-    90% {
-      transform: translateY(-.5rem);
-    }
+  //   90% {
+  //     transform: translateY(-.5rem);
+  //   }
 
-    100% {
-      transform: translateY(0);
-    }
-  }
+  //   100% {
+  //     transform: translateY(0);
+  //   }
+  // }
 
   .hamburger {
     display: flex;
@@ -169,6 +167,7 @@ ul {
       justify-content: center;
       align-items: center;
       margin-top: .5rem;
+      transition: all .2s ease-in-out;
 
       // line-height: 1.5rem;
       // text-align: center;
@@ -319,9 +318,13 @@ ul {
 
 .icon_rotate {
 
-
-  i {
-    transform: rotate(45deg);
+  span{
+    background-color: $color-green!important;
+    i {
+      transform: rotate(45deg);
+    }
   }
+
+  
 
 }
