--- a/css/main.css
+++ b/css/main.css
@@ -8977,8 +8977,27 @@ ul {
   padding-top: 5rem;
 }
 
+.nav_list-li {
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+.nav_list-li:before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  transform: translateX(100%);
+}
+.nav_list-li:hover {
+  color: #000000;
+}
+.nav_list-li:hover:before {
+  transform: translateX(0);
+}
+
 .nav_list-item {
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   color: #ffffff;
   font-size: 1.2rem;
   font-weight: 600;
@@ -9033,7 +9052,7 @@ ul {
     background-image: url(../img/intro-bg-md.jpg);
   }
   .intro:before {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
   }
   .intro_inner h2 span {
     top: 1rem;
