--- a/css/main.scss
+++ b/css/main.scss
@@ -206,8 +206,31 @@ ul {
   // overflow-y: scroll;
 }
 
+.nav_list-li{
+  position: relative;
+  transition: all .3s ease-in-out;
+  &:before
+{
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: $white;
+  transform: translateX(100%);
+}
+
+&:hover{
+  color: $black;
+  &:before{
+    transform: translateX(0);
+  }
+}
+
+}
+
+
 .nav_list-item {
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   color: $white;
   font-size: calc(1rem + .2rem);
   font-weight: 600;
@@ -290,7 +313,7 @@ ul {
 
     &:before {
 
-      background-color: rgba($color: $black, $alpha: .3);
+      background-color: rgba($color: $black, $alpha: .4);
 
 
     }
