--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 @import "scss/bootstrap";
-
+@import "./global_classes";
 //fonts
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap');
@@ -30,6 +30,7 @@ $color-green: #D8FE35;
 
 .site_wrapper {
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 //buttons
@@ -260,6 +261,31 @@ ul {
   }
 
 
+  .intro_row-wrapper{
+    position: relative;
+    z-index: 1;
+    color: $white;
+    padding-top: 18vh;
+    padding-bottom: 8vh;
+  }
+
+  .row_A{
+    h2{
+      
+      font-size: calc(4.5rem + .5vw);
+    }
+  }
+
+  .row_B{
+    .col-md-6{
+      margin-left: auto;
+
+      p{
+        font-size: calc(1.2rem + .25vw);
+
+      }
+    }
+  }
 
 }
 
@@ -296,13 +322,74 @@ ul {
 
 
 
+//styling of services section
 
-// @keyframes bgc_anim{
+.services{
+  .card{
 
-//     0% { background-size: 100%; }
-//     100% { background-size: 120%; }
+    
 
-// }
+
+    position: relative;
+    text-align: center;
+    padding: 4rem 3rem;
+    // background-color: #eaeaea;
+    transition: all .3s ease-in-out;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    // background-image: url(../img/bg-circle.svg);
+    // visibility: hidden;
+    
+    img{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      opacity: 0;
+      transition: all .3s ease-in-out;
+      
+    }
+    
+
+    i{
+      color: $black;
+      font-size: 1.5rem;
+    }
+
+    h2{
+      margin: 1.5rem 0;
+    }
+  }
+
+  .card:hover img{
+    
+    opacity: 1;
+    
+    // transition: all 3s ease-in-out;
+    // background-image: url(../img/bg-circle.svg);
+    // background: visibile;
+
+  }
+}
+
+
+
+
+//styling of intro_further section
+
+.about_company{
+  text-transform: capitalize;
+  font-size: calc(1rem + 1vw);
+  small{
+    display: block;
+    text-transform: uppercase;
+  }
+}
+
+
 
 
 
