--- a/css/main.css
+++ b/css/main.css
@@ -9078,7 +9078,7 @@ textarea.form-control-lg {
 }
 
 .sm {
-  max-width: 880px;
+  max-width: 60rem;
 }
 
 .site_wrapper {
@@ -9135,12 +9135,20 @@ ul {
   width: 100%;
 }
 
+header {
+  position: relative;
+  z-index: 100;
+}
+
 .nav_main {
   padding: 1rem 0;
 }
 .nav_main .logo {
   color: #000000;
   width: 2rem;
+}
+.nav_main .logo svg .circle_sm {
+  transform: translateX(-400px);
 }
 .nav_main .hamburger {
   display: flex;
@@ -9184,7 +9192,6 @@ ul {
 
 .nav_list-li {
   position: relative;
-  transition: all 0.3s ease-in-out;
 }
 .nav_list-li:before {
   position: absolute;
@@ -9192,10 +9199,12 @@ ul {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  transform: translateX(100%);
+  z-index: -1;
+  transform: translateX(-100%);
+  transition: all 0.3s ease-in-out;
 }
-.nav_list-li:hover {
-  color: #000000;
+.nav_list-li:hover .nav_list-item {
+  color: #000000 !important;
 }
 .nav_list-li:hover:before {
   transform: translateX(0);
@@ -9306,14 +9315,7 @@ ul {
   text-transform: uppercase;
 }
 
-@media (max-width: 768px) {
-  .intro {
-    background-position: center;
-    background-image: url(../img/intro-bg-md.jpg);
-  }
-  .intro:before {
-    background-color: rgba(0, 0, 0, 0.4);
-  }
+@media (max-width: 992px) {
   .intro_inner h2 span {
     top: 1rem;
     left: 0;
@@ -9325,8 +9327,20 @@ ul {
     font-size: calc(1rem + 0.5vw);
   }
 }
+@media (max-width: 768px) {
+  .intro {
+    background-position: center;
+    background-image: url(../img/intro-bg-md.jpg);
+  }
+  .intro:before {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+}
 .nav_toggle {
   transform: translateY(0);
+}
+.nav_toggle body {
+  overflow-y: hidden;
 }
 
 .icon_rotate span {
