--- a/css/main.scss
+++ b/css/main.scss
@@ -118,6 +118,11 @@ ul {
 
 }
 
+header{
+  position: relative;
+  z-index: 100;
+}
+
 .nav_main {
 
   padding: 1rem 0;
@@ -132,9 +137,12 @@ ul {
 
     // }
 
-    svg{
-      .circle_sm{
-        // visibility: hidden;
+    svg {
+      // overflow: initial;
+      .circle_sm {
+        
+        // opacity: 0;
+        transform: translateX(-400px);
       }
     }
   }
@@ -207,25 +215,33 @@ ul {
   // overflow-y: scroll;
 }
 
-.nav_list-li{
+.nav_list-li {
   position: relative;
-  transition: all .3s ease-in-out;
-  &:before
-{
-  position: absolute;
-  content: '';
-  width: 100%;
-  height: 100%;
-  background-color: $white;
-  transform: translateX(100%);
-}
 
-&:hover{
-  color: $black;
-  &:before{
-    transform: translateX(0);
+  &:before {
+
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: $white;
+    z-index: -1;
+    transform: translateX(-100%);
+    transition: all .3s ease-in-out;
   }
-}
+
+  &:hover {
+
+
+    .nav_list-item{
+      color: $black!important;
+    }
+    
+
+    &:before {
+      transform: translateX(0);
+    }
+  }
 
 }
 
@@ -237,6 +253,18 @@ ul {
   font-weight: 600;
 }
 
+
+
+// .nav_list-li:hover{
+//   .nav_list-item{
+//     color: $black;
+//   }
+  
+
+//   &:before {
+//     transform: translateX(0);
+//   }
+// }
 
 .intro {
   width: 100%;
@@ -261,7 +289,7 @@ ul {
   }
 
 
-  .intro_row-wrapper{
+  .intro_row-wrapper {
     position: relative;
     z-index: 1;
     color: $white;
@@ -269,18 +297,18 @@ ul {
     padding-bottom: 8vh;
   }
 
-  .row_A{
-    h2{
-      
+  .row_A {
+    h2 {
+
       font-size: calc(4.5rem + .5vw);
     }
   }
 
-  .row_B{
-    .col-md-6{
+  .row_B {
+    .col-md-6 {
       margin-left: auto;
 
-      p{
+      p {
         font-size: calc(1.2rem + .25vw);
 
       }
@@ -324,10 +352,10 @@ ul {
 
 //styling of services section
 
-.services{
-  .card{
+.services {
+  .card {
 
-    
+
 
 
     position: relative;
@@ -340,8 +368,8 @@ ul {
     background-size: contain;
     // background-image: url(../img/bg-circle.svg);
     // visibility: hidden;
-    
-    img{
+
+    img {
       position: absolute;
       top: 0;
       left: 0;
@@ -350,24 +378,24 @@ ul {
       z-index: -1;
       opacity: 0;
       transition: all .3s ease-in-out;
-      
-    }
-    
 
-    i{
+    }
+
+
+    i {
       color: $black;
       font-size: 1.5rem;
     }
 
-    h2{
+    h2 {
       margin: 1.5rem 0;
     }
   }
 
-  .card:hover img{
-    
+  .card:hover img {
+
     opacity: 1;
-    
+
     // transition: all 3s ease-in-out;
     // background-image: url(../img/bg-circle.svg);
     // background: visibile;
@@ -380,16 +408,38 @@ ul {
 
 //styling of intro_further section
 
-.about_company{
+.about_company {
   text-transform: capitalize;
   font-size: calc(1rem + 1vw);
-  small{
+
+  small {
     display: block;
     text-transform: uppercase;
   }
 }
 
 
+
+@media(max-width: 992px) {
+
+  .intro_inner h2 {
+
+
+
+    span {
+      top: 1rem;
+      left: 0;
+      padding-left: 0;
+      transform: translate(0, 25rem);
+      padding-right: 1.5rem;
+      text-align: justify;
+      width: 100vw;
+      font-size: calc(1rem + .5vw);
+    }
+  }
+
+
+}
 
 
 
@@ -406,27 +456,15 @@ ul {
     }
   }
 
-  .intro_inner h2 {
 
-    
 
-    span {
-      top: 1rem;
-      left: 0;
-      padding-left: 0;
-      transform: translate(0, 25rem);
-      padding-right: 1.5rem;
-      text-align: justify;
-      width: 100vw;
-      font-size: calc(1rem + .5vw);
-    }
-  }
-
-  
 }
 
 .nav_toggle {
   transform: translateY(0);
+  body{
+    overflow-y: hidden;
+  }
 
 
 
@@ -436,13 +474,14 @@ ul {
 
 .icon_rotate {
 
-  span{
-    background-color: $color-green!important;
+  span {
+    background-color: $color-green !important;
+
     i {
       transform: rotate(45deg);
     }
   }
 
-  
+
 
 }
