--- a/css/main.css
+++ b/css/main.css
@@ -1850,8 +1850,7 @@ progress {
 .form-control::file-selector-button {
   padding: 0.375rem 0.75rem;
   margin: -0.375rem -0.75rem;
-  -webkit-margin-end: 0.75rem;
-          margin-inline-end: 0.75rem;
+  margin-inline-end: 0.75rem;
   color: #212529;
   background-color: #e9ecef;
   pointer-events: none;
@@ -1873,8 +1872,7 @@ progress {
 .form-control::-webkit-file-upload-button {
   padding: 0.375rem 0.75rem;
   margin: -0.375rem -0.75rem;
-  -webkit-margin-end: 0.75rem;
-          margin-inline-end: 0.75rem;
+  margin-inline-end: 0.75rem;
   color: #212529;
   background-color: #e9ecef;
   pointer-events: none;
@@ -1921,14 +1919,12 @@ progress {
 .form-control-sm::file-selector-button {
   padding: 0.25rem 0.5rem;
   margin: -0.25rem -0.5rem;
-  -webkit-margin-end: 0.5rem;
-          margin-inline-end: 0.5rem;
+  margin-inline-end: 0.5rem;
 }
 .form-control-sm::-webkit-file-upload-button {
   padding: 0.25rem 0.5rem;
   margin: -0.25rem -0.5rem;
-  -webkit-margin-end: 0.5rem;
-          margin-inline-end: 0.5rem;
+  margin-inline-end: 0.5rem;
 }
 
 .form-control-lg {
@@ -1940,14 +1936,12 @@ progress {
 .form-control-lg::file-selector-button {
   padding: 0.5rem 1rem;
   margin: -0.5rem -1rem;
-  -webkit-margin-end: 1rem;
-          margin-inline-end: 1rem;
+  margin-inline-end: 1rem;
 }
 .form-control-lg::-webkit-file-upload-button {
   padding: 0.5rem 1rem;
   margin: -0.5rem -1rem;
-  -webkit-margin-end: 1rem;
-          margin-inline-end: 1rem;
+  margin-inline-end: 1rem;
 }
 
 textarea.form-control {
@@ -9081,6 +9075,32 @@ textarea.form-control-lg {
   max-width: 60rem;
 }
 
+.sec_heading {
+  text-transform: capitalize;
+  font-size: calc(1.5rem + 1vw);
+}
+.sec_heading h2 {
+  line-height: 2.5rem;
+}
+.sec_heading small {
+  display: block;
+  text-transform: uppercase;
+  font-size: 40%;
+  font-weight: bold;
+  line-height: 1.5rem;
+}
+
+.hollow_text {
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 3px #000;
+  -moz-text-fill-color: transparent;
+}
+
+@media (max-width: 768px) {
+  .sec_space {
+    padding: 2rem 0;
+  }
+}
 .site_wrapper {
   overflow-x: hidden;
   overflow-y: hidden;
@@ -9128,16 +9148,16 @@ ul {
   justify-content: space-between;
 }
 
+header {
+  position: relative;
+  z-index: 100;
+}
+
 .nav_sect {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-}
-
-header {
-  position: relative;
-  z-index: 100;
 }
 
 .nav_main {
@@ -9297,7 +9317,7 @@ header {
 }
 .services .card i {
   color: #000000;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 .services .card h2 {
   margin: 1.5rem 0;
@@ -9306,13 +9326,88 @@ header {
   opacity: 1;
 }
 
-.about_company {
-  text-transform: capitalize;
-  font-size: calc(1rem + 1vw);
+.intro_further-inner {
+  padding-bottom: 3rem;
 }
-.about_company small {
+
+.go-down-btn {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.go-down-btn::after {
+  position: absolute;
+  content: "";
+  width: 14rem;
+  height: 14rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  outline: 1px solid #000000;
+  border-radius: 50%;
+}
+.go-down-btn span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  width: 8rem;
+  height: 8rem;
+  color: white;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 8rem;
+  outline: 1px solid #000000;
+  font-size: 4rem;
+}
+.go-down-btn svg {
+  position: relative;
+  z-index: 10;
   display: block;
-  text-transform: uppercase;
+}
+.go-down-btn text {
+  font-size: 10px;
+  transform-origin: center;
+}
+
+@keyframes rotate-btn {
+  to {
+    transform: rotate(360deg);
+  }
+}
+.go-down-btn text {
+  animation: rotate-btn 10s linear infinite;
+}
+
+.moto_card {
+  text-align: justify;
+}
+.moto_card h2 {
+  margin-bottom: 1.5rem;
+}
+.moto_card strong {
+  text-decoration: underline;
+}
+
+.company_slogan {
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  border-top-color: #4d4d4d;
+  border-bottom-color: #4d4d4d;
+}
+.company_slogan h2 {
+  font-size: 5rem;
+  white-space: nowrap;
+  transform: translateX(100%);
+}
+
+.featured_proj .sec_heading h2 {
+  font-size: calc(2rem + 0.5vw);
 }
 
 @media (max-width: 992px) {
@@ -9334,6 +9429,12 @@ header {
   }
   .intro:before {
     background-color: rgba(0, 0, 0, 0.4);
+  }
+  .intro_further .row [class^=col-] {
+    padding: 1rem 12px;
+  }
+  .our_moto .row [class^=col-] {
+    padding: 1rem 12px;
   }
 }
 .nav_toggle {
