--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,7 @@
 @import "scss/bootstrap";
 @import "./global_classes";
+@import "./atom";
+
 //fonts
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap');
@@ -17,15 +19,6 @@ $font_family-b: 'Butterfly Kids',
 sans-serif;
 
 
-// color variales
-$white: #ffffff;
-$black: #000000;
-$d-blue: #271344;
-$dul_blue: #361C5B;
-$blue: #1AB9FD;
-$color-orange: #FCC000;
-$color-crimson: #FD6766;
-$color-green: #D8FE35;
 
 
 .site_wrapper {
@@ -513,11 +506,98 @@ header {
 //styling of featured_proj section
 
 
-.featured_proj .sec_heading h2{
-  font-size: calc(2rem + .5vw);
+.featured_proj{
+  border-bottom: 1px solid lighten($color: $black, $amount: 70%);
+  .sec_heading{
+    margin-bottom: 2rem;
+
+    h2{
+      font-size: calc(2rem + .5vw);
+      
+    }
+  } 
+} 
+
+.featured_proj-list{
+  width: 100%;
+  margin-bottom: 2rem;
+  
+
+  li{
+    border-bottom: 1px solid lighten($color: #000000, $amount: 70%);
+    // width: 100%;
+
+    &:hover{
+      .featured_list-item{
+        color: $black;
+      }
+    }
+  }
 }
 
 
+.featured_list-item{
+  color: $black;
+  position: relative;
+  margin-left: 7rem;
+  font-size: calc(1.5rem + .5vw);
+  color: lighten($color: $black, $amount: 70%);
+  padding: 1rem 0;
+  text-transform: capitalize;
+  transition: all .3s linear;
+  
+
+  strong{
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(-7rem, 1.7rem);
+    text-transform: uppercase;
+    font-size: 40%;
+    color: $black;
+    
+  }
+}
+
+.featured_img-sec{
+  position: relative;
+  width: calc(17rem + 2vw);
+    height: calc(17rem + 2vw);
+    display: block;
+    border-radius: 50%;
+    background-color: $color-green;
+
+
+  .featured_person-img{
+    position: absolute;
+    top: 15%;
+    left: 25%;
+    transform: rotate(-15deg);
+    width: calc(14rem + 2vw);
+    overflow: hidden;
+
+    img{
+      width: 100%;
+      animation: img_anim 15s linear infinite;
+
+    }
+  }
+}
+
+
+@keyframes img_anim {
+  0%{
+    transform: scale(1);
+  }
+
+  50%{
+    transform: scale(1.1);
+  }
+
+  100%{
+    transform: scale(1);
+  }
+}
 
 
 
@@ -576,6 +656,16 @@ header {
     .row [class^="col-"] {
       padding: 1rem 12px;
     }
+  }
+
+
+  .featured_img-sec{
+    margin: 4rem 0;
+
+    .featured_person-img{
+      // width: calc(14rem + 2vw);
+    }
+    
   }
 
 
