--- a/css/_global_classes.scss
+++ b/css/_global_classes.scss
@@ -1,5 +1,5 @@
-
 @import "./atom";
+
 .sec_space {
     padding: 4rem 0;
 }
@@ -9,7 +9,36 @@
     max-width: 60rem;
 }
 
-.btn_custom{
+.ps_r {
+    position: relative;
+}
+
+.anchor_dec-none {
+    display: inline-block;
+    text-decoration: none;
+    // &:hover{
+    //     color: $black;
+    // }
+}
+
+.transition_class{
+    transition: all .3s linear;
+}
+
+.pseudo_element {
+    &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+}
+
+.btn_custom {
     // display: inline-block;
     text-decoration: none;
     padding: 1rem 1.5rem;
@@ -21,33 +50,33 @@
     border-radius: 2rem;
     font-size: calc(.3rem + .5vw);
 
-    
-    
 
-    i{
+
+
+    i {
         position: relative;
         z-index: 10;
         font-size: .65rem;
         color: $black;
         font-weight: normal;
 
-        &:after{
+        &:after {
             content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50% , -50%);
-        width: 1.5rem;
-        height: 1.5rem;
-        background-color: $color-green;
-        border-radius: 50%;
-        z-index: -1;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 1.5rem;
+            height: 1.5rem;
+            background-color: $color-green;
+            border-radius: 50%;
+            z-index: -1;
         }
-        
+
     }
 }
 
-.btn_black{
+.btn_black {
     // padding-left: 3rem;
     background-color: $black;
     color: $white;
@@ -56,11 +85,17 @@
 }
 
 
-.ul_style-n{
+.ul_style-n {
     list-style: none;
 }
 
-.custom_a{
+.custom_ul{
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+
+.custom_a {
     display: inline-block;
     text-decoration: none;
 }
@@ -68,19 +103,23 @@
 .sec_heading {
     text-transform: capitalize;
     font-size: calc(1.5rem + 1vw);
-  
+
     h2 {
-      line-height: 2.5rem;
+        line-height: 2.5rem;
     }
-  
+
     small {
-      display: block;
-      text-transform: uppercase;
-      font-size: 40%;
-      font-weight: bold;
-      line-height: 1.5rem;
+        display: block;
+        text-transform: uppercase;
+        font-size: 40%;
+        font-weight: bold;
+        line-height: 1.5rem;
     }
-  }
+}
+
+.center_text {
+    text-align: center;
+}
 
 
 
@@ -95,4 +134,3 @@
         padding: 2rem 0;
     }
 }
-
