--- a/css/main.css
+++ b/css/main.css
@@ -9075,6 +9075,29 @@ textarea.form-control-lg {
   max-width: 60rem;
 }
 
+.ps_r {
+  position: relative;
+}
+
+.anchor_dec-none {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.transition_class {
+  transition: all 0.3s linear;
+}
+
+.pseudo_element::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .btn_custom {
   text-decoration: none;
   padding: 1rem 1.5rem;
@@ -9117,6 +9140,12 @@ textarea.form-control-lg {
   list-style: none;
 }
 
+.custom_ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+
 .custom_a {
   display: inline-block;
   text-decoration: none;
@@ -9135,6 +9164,10 @@ textarea.form-control-lg {
   font-size: 40%;
   font-weight: bold;
   line-height: 1.5rem;
+}
+
+.center_text {
+  text-align: center;
 }
 
 .hollow_text {
@@ -9526,6 +9559,200 @@ header {
     transform: scale(1);
   }
 }
+.our_team .sec_heading h2 {
+  font-size: calc(1.8rem + 1vw);
+  line-height: 3rem;
+  margin-bottom: 2rem;
+}
+.our_team .sec_heading h2 small {
+  margin-bottom: 1rem;
+}
+
+.media_btn {
+  color: #000000;
+  padding: 1rem;
+  margin-right: 0.5rem;
+}
+.media_btn::after {
+  width: 3rem;
+  height: 3rem;
+  border: 1px solid #000000;
+  border-radius: 50%;
+}
+
+.our_team-card {
+  border: 1px solid transparent;
+}
+.our_team-card figure {
+  margin-bottom: 0;
+}
+.our_team-card:hover {
+  background-color: #D8FE35;
+  border-color: #000000;
+}
+.our_team-card:hover .facebook {
+  color: #ffffff;
+  z-index: 10;
+}
+.our_team-card:hover .facebook::after {
+  background-color: #000000;
+  z-index: -1;
+}
+.our_team-card:hover .name_initials {
+  color: #D8FE35;
+  -webkit-text-stroke: 0px #D8FE35;
+}
+.our_team-card:hover img {
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(0);
+}
+.our_team-card .facebook::after {
+  transition: all 0.3s linear;
+}
+.our_team-card h2 {
+  padding: 1rem;
+  font-size: calc(1.5rem + 0.5vw);
+  line-height: 2rem;
+}
+.our_team-card h2 small {
+  font-size: 50%;
+  display: block;
+  font-weight: bold;
+  margin-top: 0.5rem;
+}
+
+.social_media-btns {
+  padding: 0 1rem;
+  margin-top: 1rem;
+}
+
+.our_team-card img {
+  display: block;
+  margin: 0 auto;
+  height: 350px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(1);
+}
+
+.our_team-card picture {
+  display: block;
+  width: 100%;
+  height: 400px;
+  bottom: 0;
+  left: 0;
+  padding: 0 1rem;
+}
+.our_team-card picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.name_initials {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  font-size: calc(12rem + 1vw);
+  text-transform: uppercase;
+  -webkit-text-stroke: 3px #000000;
+  color: white;
+  font-weight: bold;
+  line-height: 0.85;
+  transition: all 0.3s linear;
+}
+
+.our_team .col-md-3:nth-child(2) .name_initials {
+  transform: translateX(15px);
+}
+
+.our_team .col-md-3:nth-child(3) .name_initials {
+  transform: translateX(7px);
+}
+
+.sec_heading .intro_further {
+  display: flex;
+  align-items: center;
+}
+.sec_heading .intro_further ul {
+  margin-left: 1rem;
+  margin-right: 0.5rem;
+  display: flex;
+  align-items: center;
+  align-items: center;
+  background-color: #D8FE35;
+  border-radius: 1rem;
+  gap: 0.25rem;
+  padding: 0.25rem;
+}
+.sec_heading .intro_further ul span {
+  display: flex;
+  align-items: center;
+}
+.sec_heading .intro_further ul i {
+  font-size: 0.5rem;
+  color: #000000;
+}
+.sec_heading .intro_further small {
+  font-size: 50%;
+  font-weight: normal;
+  text-transform: capitalize;
+}
+
+.slider_btns {
+  margin-top: 4rem;
+  position: relative;
+  width: 10rem;
+}
+
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  display: none;
+}
+.swiper-button-prev:before,
+.swiper-button-next:before {
+  content: "";
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  border: 1px solid #000000;
+  border-radius: 50%;
+}
+.swiper-button-prev i,
+.swiper-button-next i {
+  color: #000000;
+}
+.swiper-button-prev i:after,
+.swiper-button-next i:after {
+  position: absolute;
+  content: "";
+  width: 3rem;
+  height: 2px;
+  background-color: #000000;
+  top: 50%;
+  left: 50%;
+}
+
+.swiper-button-prev:before {
+  background-color: #D8FE35;
+  z-index: -1;
+}
+.swiper-button-prev i:after {
+  transform: translate(0, -50%) !important;
+}
+
+.swiper-button-next i:after {
+  transform: translate(-100%, -50%) !important;
+}
+
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
+  opacity: 1;
+}
+
 @media (max-width: 992px) {
   .intro_inner h2 span {
     top: 1rem;
