--- a/css/main.scss
+++ b/css/main.scss
@@ -57,26 +57,7 @@ ul {
 }
 
 
-// styling of theme buttons
 
-// .btn_theme {
-//   display: inline-block;
-//   text-decoration: none;
-//   padding: .7rem 1.3rem .6rem;
-//   border-radius: .5rem;
-//   font-size: calc(.8rem + .2vw);
-//   transition: all ease-in-out .2s;
-//   background-color: $d-pink;
-//   color: $white;
-//   border: 1px solid transparent;
-
-//   &:hover {
-//     background-color: $white;
-//     border-color: $d-pink;
-//     color: $color-crimson;
-//   }
-
-// }
 
 
 //global styling
@@ -125,46 +106,23 @@ header {
   .logo {
     color: $black;
     width: 2rem;
-    // animation: logo_anim 4s linear infinite;
 
-    // img {
-    //   height: 4rem;
-
-    // }
 
     svg {
 
-      // overflow: initial;
+
       .circle_sm {
 
-        // opacity: 0;
         transform: translateX(-400px);
       }
     }
   }
 
-  // @keyframes logo_anim {
-  //   0% {
-  //     transform: translateY(0);
-  //   }
 
-  //   50% {
-  //     transform: translateY(.5rem);
-  //   }
-
-  //   90% {
-  //     transform: translateY(-.5rem);
-  //   }
-
-  //   100% {
-  //     transform: translateY(0);
-  //   }
-  // }
 
   .hamburger {
     display: flex;
     align-items: center;
-    // padding-right: 0.25rem;
     gap: .5rem;
     color: $white;
     font-size: calc(1rem + .5vw);
@@ -178,11 +136,8 @@ header {
       display: flex;
       justify-content: center;
       align-items: center;
-      // margin-top: .5rem;
       transition: all .2s ease-in-out;
 
-      // line-height: 1.5rem;
-      // text-align: center;
       i {
         transition: all .2s ease-in-out;
         font-size: .7rem;
@@ -441,7 +396,7 @@ header {
     line-height: 8rem;
     outline: 1px solid $black;
     font-size: 4rem;
-    
+
   }
 
   svg {
@@ -472,7 +427,7 @@ header {
 
 //styling of our_moto section
 
-.our_moto {}
+
 
 .moto_card {
   text-align: justify;
@@ -489,12 +444,13 @@ header {
 
 //styling of company_slogan section
 
-.company_slogan{
+.company_slogan {
   border-top: 1px solid;
   border-bottom: 1px solid;
   border-top-color: lighten($color: $black, $amount: 30%);
   border-bottom-color: lighten($color: $black, $amount: 30%);
-  h2{
+
+  h2 {
     font-size: 5rem;
     white-space: nowrap;
     transform: translateX(100%);
@@ -506,29 +462,30 @@ header {
 //styling of featured_proj section
 
 
-.featured_proj{
+.featured_proj {
   border-bottom: 1px solid lighten($color: $black, $amount: 70%);
-  .sec_heading{
+
+  .sec_heading {
     margin-bottom: 2rem;
 
-    h2{
+    h2 {
       font-size: calc(2rem + .5vw);
-      
-    }
-  } 
-} 
 
-.featured_proj-list{
+    }
+  }
+}
+
+.featured_proj-list {
   width: 100%;
   margin-bottom: 2rem;
-  
 
-  li{
+
+  li {
     border-bottom: 1px solid lighten($color: #000000, $amount: 70%);
     // width: 100%;
 
-    &:hover{
-      .featured_list-item{
+    &:hover {
+      .featured_list-item {
         color: $black;
       }
     }
@@ -536,7 +493,7 @@ header {
 }
 
 
-.featured_list-item{
+.featured_list-item {
   color: $black;
   position: relative;
   margin-left: 7rem;
@@ -545,9 +502,9 @@ header {
   padding: 1rem 0;
   text-transform: capitalize;
   transition: all .3s linear;
-  
 
-  strong{
+
+  strong {
     position: absolute;
     top: 0;
     left: 0;
@@ -555,20 +512,20 @@ header {
     text-transform: uppercase;
     font-size: 40%;
     color: $black;
-    
+
   }
 }
 
-.featured_img-sec{
+.featured_img-sec {
   position: relative;
   width: calc(17rem + 2vw);
-    height: calc(17rem + 2vw);
-    display: block;
-    border-radius: 50%;
-    background-color: $color-green;
+  height: calc(17rem + 2vw);
+  display: block;
+  border-radius: 50%;
+  background-color: $color-green;
 
 
-  .featured_person-img{
+  .featured_person-img {
     position: absolute;
     top: 15%;
     left: 25%;
@@ -576,7 +533,7 @@ header {
     width: calc(14rem + 2vw);
     overflow: hidden;
 
-    img{
+    img {
       width: 100%;
       animation: img_anim 15s linear infinite;
 
@@ -586,19 +543,279 @@ header {
 
 
 @keyframes img_anim {
-  0%{
+  0% {
     transform: scale(1);
   }
 
-  50%{
+  50% {
     transform: scale(1.1);
   }
 
-  100%{
+  100% {
     transform: scale(1);
   }
 }
 
+// styling of our_team section
+.our_team {
+
+  .sec_heading {
+    h2 {
+      font-size: calc(1.8rem + 1vw);
+      line-height: 3rem;
+      margin-bottom: 2rem;
+
+      small {
+        margin-bottom: 1rem;
+
+      }
+    }
+  }
+
+}
+
+
+.media_btn {
+  color: $black;
+  padding: 1rem;
+  margin-right: .5rem;
+
+
+  &::after {
+    width: 3rem;
+    height: 3rem;
+    border: 1px solid $black;
+    border-radius: 50%;
+  }
+}
+
+
+
+.our_team-card {
+  border: 1px solid transparent;
+  // padding: 1rem 1rem 0 1rem;
+
+  figure {
+    margin-bottom: 0;
+  }
+
+  &:hover {
+    background-color: $color-green;
+    border-color: $black;
+
+    .facebook {
+      color: $white;
+      z-index: 10;
+
+      // background-col;
+
+      &::after {
+        background-color: $black;
+        z-index: -1;
+      }
+    }
+
+    .name_initials {
+      color: $color-green;
+      -webkit-text-stroke: 0px $color-green;
+    }
+
+
+    img {
+      filter: grayscale(100%);
+      -webkit-filter: grayscale(0);
+    }
+
+  }
+
+  .facebook::after {
+    transition: all .3s linear;
+  }
+
+  h2 {
+    padding: 1rem;
+    font-size: calc(1.5rem + .5vw);
+    line-height: 2rem;
+
+    small {
+      font-size: 50%;
+      display: block;
+      font-weight: bold;
+      margin-top: .5rem;
+    }
+  }
+}
+
+
+.social_media-btns {
+  padding: 0 1rem;
+  margin-top: 1rem;
+}
+
+
+
+.our_team-card {
+
+
+  img {
+    display: block;
+    margin: 0 auto;
+    // margin-top: 1.5rem;
+    height: 350px;
+    width: 100%;
+    object-fit: cover;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(1);
+  }
+}
+
+.our_team-card picture {
+  display: block;
+  width: 100%;
+  height: 400px;
+  bottom: 0;
+  left: 0;
+  padding: 0 1rem;
+
+  img {
+    // position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.name_initials {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  font-size: calc(12rem + 1vw);
+  text-transform: uppercase;
+  -webkit-text-stroke: 3px #000000;
+  color: white;
+  font-weight: bold;
+  line-height: .85;
+  transition: all .3s linear;
+}
+
+
+.our_team .col-md-3:nth-child(2) .name_initials {
+  transform: translateX(15px);
+}
+
+
+.our_team .col-md-3:nth-child(3) .name_initials {
+  transform: translateX(7px);
+}
+
+
+//styling of testimonial section
+
+
+
+.sec_heading .intro_further {
+  display: flex;
+  align-items: center;
+
+
+
+  ul {
+    margin-left: 1rem;
+    margin-right: .5rem;
+    display: flex;
+    align-items: center;
+    align-items: center;
+    background-color: $color-green;
+    border-radius: 1rem;
+    gap: .25rem;
+    padding: .25rem;
+
+    span {
+      display: flex;
+
+      // display: flex;
+      align-items: center;
+      // justify-content: center;
+    }
+
+    i {
+      font-size: .5rem;
+      color: $black;
+    }
+  }
+
+  small {
+    font-size: 50%;
+    font-weight: normal;
+    text-transform: capitalize;
+  }
+
+}
+
+.slider_btns {
+  margin-top: 4rem;
+  position: relative;
+
+  width: 10rem;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  &:after {
+    display: none;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 3rem;
+    height: 3rem;
+    border: 1px solid $black;
+    border-radius: 50%;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
+  }
+
+  i {
+    color: $black;
+
+    &:after {
+      position: absolute;
+      content: '';
+      width: 3rem;
+      height: 2px;
+      background-color: $black;
+      top: 50%;
+      left: 50%;
+    }
+
+  }
+}
+
+.swiper-button-prev {
+  &:before {
+    background-color: $color-green;
+    z-index: -1;
+  }
+
+  i {
+    &:after {
+      transform: translate(0, -50%) !important;
+    }
+  }
+}
+
+.swiper-button-next i {
+  &:after {
+    transform: translate(-100%, -50%) !important;
+  }
+}
+
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
+  opacity: 1;
+}
 
 
 @media(max-width: 992px) {
@@ -659,13 +876,11 @@ header {
   }
 
 
-  .featured_img-sec{
+  .featured_img-sec {
     margin: 4rem 0;
 
-    .featured_person-img{
-      // width: calc(14rem + 2vw);
-    }
-    
+
+
   }
 
 
