--- a/css/main.scss
+++ b/css/main.scss
@@ -688,7 +688,9 @@ header {
 .name_initials {
   position: absolute;
   bottom: 0;
-  right: 0;
+  // right: 100%;
+  left: 100%;
+  transform: translate(-100%);
   font-size: calc(12rem + 1vw);
   text-transform: uppercase;
   -webkit-text-stroke: 3px #000000;
@@ -699,14 +701,6 @@ header {
 }
 
 
-.our_team .col-md-3:nth-child(2) .name_initials {
-  transform: translateX(15px);
-}
-
-
-.our_team .col-md-3:nth-child(3) .name_initials {
-  transform: translateX(7px);
-}
 
 
 //styling of testimonial section
@@ -817,6 +811,144 @@ header {
   opacity: 1;
 }
 
+.testmonial_name-sect h2{
+  margin-top: 2rem;
+}
+
+.testimonial_inner .swiper-slide{
+  padding-left: 2.5rem;
+
+  p{
+    line-height: 2.05;
+    font-weight: 600;
+  }
+}
+
+.testimonial_rating{
+  margin-top: .5rem;
+  gap: 1rem;
+
+  .custom_ul{
+    background-color: $color-green;
+    gap: 0.5rem;
+    padding: .25rem .5rem;
+    border-radius: 1rem;
+    
+    li{
+      line-height: 0;
+      
+    }
+
+    i{
+      font-size: .75rem;
+      
+
+    }
+  }
+}
+
+
+//styling of video_sect
+
+.video_sec-inner{
+  video{
+    width: 100%;
+  }
+}
+.video_logo{
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  video{
+    width: 100%;
+  }
+
+  .go-down-btn{
+
+
+    svg{
+      width: 150px;
+      height: 150px;
+    }
+    .hollow_text{
+      width: 5rem;
+      height: 5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      i{
+        font-size: 2.5rem;
+      }
+    }
+
+    span{
+      background-color: $color-green;
+    }
+
+    text{
+      font-size: 16px;
+    }
+
+    &:after{
+      background-color: $color-green;
+      z-index: -1;
+      width: 11rem;
+      height: 11rem;
+      outline: 0;
+    }
+
+  } 
+
+}
+
+//styling of counter_sect
+
+.counter_sect {
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+.counter_card{
+  width: fit-content;
+  text-align: center;
+
+  .hollow_text{
+    -webkit-text-stroke: 2px #000000;
+  }
+
+  h2{
+    position: relative;
+    font-size: calc(5rem + 1vw);
+
+    small{
+      display: block;
+      font-size: 30%;
+      -webkit-text-stroke: 0;
+      // color: lighten($color: #000000, $amount: 20%);
+      -webkit-text-fill-color: rgba($color: #000000, $alpha: .7);
+    }
+
+    &:after{
+      position: absolute;
+      content: attr(data-unit);
+      top: 0;
+      left: 0;
+      font-size: 50%;
+      font-weight: 800;
+      transform: translate(9.5rem, .5rem);
+      -webkit-text-stroke: 2px #000000;
+    }
+  }
+
+  
+}
+
+// .video_sect .Badge_module_badge__059626b3{
+//   display: none;
+// }
 
 @media(max-width: 992px) {
 
@@ -884,6 +1016,23 @@ header {
   }
 
 
+
+  .video_sec-inner .go-down-btn{
+    .hollow_text{
+      width: 3rem;
+      height: 3rem;
+    }
+    svg{
+      width: 100px;
+      height: 100px;
+    }
+
+    &:after{
+      width: 7rem;
+      height: 7rem;
+    }
+  }
+
 }
 
 .nav_toggle {
@@ -911,4 +1060,18 @@ header {
 
 
 
+}
+
+
+.body_overflow{
+  overflow: hidden;
+  padding-right: 1rem;
+}
+
+.bg_visible{
+  background-color: green;
+
+  .hamburger{
+    color: $black;
+  }
 }
