--- a/css/scss/_bootstrap.scss
+++ b/css/scss/_bootstrap.scss
@@ -27,26 +27,26 @@
 @import "button-group";
 @import "nav";
 @import "navbar";
-// @import "card";
+@import "card";
 @import "accordion";
-// @import "breadcrumb";
-// @import "pagination";
+@import "breadcrumb";
+@import "pagination";
 @import "badge";
 @import "alert";
-//  @import "progress";
+ @import "progress";
 @import "list-group";
 @import "close";
-// @import "toasts";
+@import "toasts";
 @import "modal";
 @import "tooltip";
-// @import "popover";
+@import "popover";
 @import "carousel";
 @import "spinners";
-// @import "offcanvas";
+@import "offcanvas";
 
 // Helpers
 @import "helpers";
 
 // Utilities
-@import "utilities/api";
+// @import "utilities/api";
 // scss-docs-end import-stack
